<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agenda</string>
    <string name="title_section1">Inicio</string>
    <string name="title_section2">Crear</string>
    <string name="title_section3">Contactos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="firstName">Nombres</string>
    <string name="lastName">Apellidos</string>
    <string name="code">Code</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="active">Estado</string>
    <string name="validationMessage">Campo Requerido</string>
    <string name="no_email">sin email</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_listado">ListadoActivity</string>

    <string-array name="paises">
        <item>México</item>
        <item>Perú</item>
        <item>España</item>
        <item>Colombia</item>
    </string-array>

    <string name="title_activity_users">UsersActivity</string>

</resources>
